sd-core/src/language/mlir/snapshots/sd_core__language__mlir__internal__tests__parse_mlir_block.snap
---
source: sd-core/src/language/mlir/internal.rs
expression: syntax_tree
---
Block {
    label: BlockLabel {
        id: BlockId(
            "^bb0",
        ),
        args: [
            TypedArg {
                id: "%arg0",
                type: "i64",
            },
            TypedArg {
                id: "%arg1",
                type: "i1",
            },
        ],
    },
    operations: [
        Operation {
            result: [],
            operation: GenericOperation {
                op: "cf.cond_br",
                operands: [
                    Value {
                        id: "%arg1",
                        index: None,
                    },
                ],
                successors: [
                    Successor {
                        id: "^bb1",
                        args: [],
                    },
                    Successor {
                        id: "^bb2",
                        args: [],
                    },
                ],
                properties: [
                    Attribute(
                        "operand_segment_sizes",
                        "array<i32: [1, 0, 0]>",
                    ),
                ],
                regions: [],
                attributes: [],
                function_type: "(i1) -> ()",
            },
            location: None,
        },
    ],
}
